Updating dependencies for security vulnerabilities
- updating all potential security vulnerabilities flagged by NPM
- updating lodash dependancies via ‘npm update lodash --depth 6’
- updates required linting to new XO standards
- refactoring logic to us async/await instead of .then()
- updates required refactoring async unit tests
- updating layout views product description
- adding dev helper scripts
- adding nodemon
- updating .editorconfig to be more .pug friendly
- requiring node 8 and higher
- setting version to 1.0.4

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -48,8 +48,14 @@ html(lang='en')
             .hline-w
             p
               a(href='https://github.com/infinitedescent/s-ais') S-AIS
-              |  is a self-reporting service for DeLorme inReach/Explorer devices created by
-              em Infinite Descent, LLC
+              |  is a self-hosted service that submits 
+              a(href='https://help.marinetraffic.com/hc/en-us/articles/205327337-Which-are-the-different-ways-of-reporting-my-own-position-') MarineTraffic self-reports
+              |  based on location data provided by a 
+              a(href='https://www8.garmin.com/manuals/webhelp/inreachweb/EN-US/GUID-736180F0-1EB1-4AB9-94FA-F6CCDC888DC9.html') Garmin/DeLorme MapShare
+              |  account.
+            p 
+              | Created by 
+              em Infinite Descent®, LLC 
           .col-lg-4
             h4 Social Links
             .hline-w
